syntax = "proto3";

package FaissServer;

message FaissIndex {
    enum ModelName {
        DSSM_TYPE_1 = 0;
    }
    enum IndexType {
        NORMAL = 0;
    }

    ModelName model_name = 1;
    IndexType index_type = 2;
    uint32 version = 3;
}






